# asdfspline-rust

./: .gitignore  .travis.yml  Cargo.toml  README.md
.binder/: README  postBuild
.github/workflows/: main.yml
ffi/: Cargo.toml  asdfspline.h  cbindgen.toml
ffi/src/: lib.rs
python/: .gitignore  README.rst  asdfspline_build.py  cbindgen.toml  setup.py
python/examples/: asdfspline.ipynb  centripetalkochanekbartels.ipynb  monotone.ipynb  piecewisemonotone.ipynb  shapepreserving.ipynb  turenas.ipynb  utilities.py
python/src/: asdfspline.py
python/tests/: test_CentripetalKochanekBartelsSpline2.py  test_PiecewiseMonotoneCubicSpline.py  test_ShapePreservingCubicSpline.py
src/: adapters.rs  asdfposspline.rs  asdfrotspline.rs  asdfspline.rs  centripetalkochanekbartelsspline.rs  cubichermitespline.rs  error.rs  lib.rs  monotonecubicspline.rs  piecewisecubiccurve.rs  piecewisemonotonecubicspline.rs  shapepreservingcubicspline.rs  utilities.rs
src/quaternion/: centripetalkochanekbartelsspline.rs  cubicdecasteljau.rs  mod.rs
