[package]
name = "asdfspline-ffi"
version = "0.0.0"
authors = ["Matthias Geier <Matthias.Geier@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
asdfspline = { path = ".." }
libc = "*"
# This doesn't have to be the same version as used in the main crate:
nalgebra = "0.32"
