[package]
name = "asdfspline-ffi"
version = "0.0.0"
authors = ["Matthias Geier <Matthias.Geier@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
asdfspline = { path = ".." }
libc = "0.2"
# This doesn't have to be the same version as used in the main crate:
# 0.34 switches to edition 2024 and MSRV 1.84
nalgebra = "0.33"
